--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,17 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
 
-    compileSdkVersion 30
+    compileSdkVersion 29
 
     defaultConfig {
         applicationId "ro.upt.ac.chiuitter"
         minSdkVersion 22
-        targetSdkVersion 30
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -25,6 +26,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.room:room-common:2.2.6'
     def lifecycle_version = "2.0.0"
     def room_version = "1.1.1"
 
